@@ -194,7 +194,18 @@ PHPAPI php_url *php_url_parse(char *str)
 	}
 	
 	/* check for port */
-	if ((p = memchr(s, ':', (e-s)))) {
+	if (*s == '[' && *(e-1) == ']') {
+		/* Short circuit portscan
+		   we're dealing with an
+		   IPv6 embedded address */
+		p = s;
+	} else {
+		/* memchr is a GNU specific extension
+		   Emulate for wide compatability */
+		for(p = e; *p != ':' && p >= s; p--);
+	}
+
+	if (p >= s && *p == ':') {
 		if (!ret->port) {
 			p++;
 			if (e-p > 5) { /* port cannot be longer then 5 characters */
@@ -212,6 +223,11 @@ PHPAPI php_url *php_url_parse(char *str)
 		}	
 	} else {
 		p = e;
+	}
+
+	if (*s == '[' && *(p-1) == ']') {
+		s++;
+		p--;
 	}
 	
 	/* check if we have a valid host, if we don't reject the string as url */
